[package]
name = "digestive"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.3"
reqwest = { version = "0.12.7" }
anyhow = "1.0.89"
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
tonic-build = "0.12.3"